...
        realizarCadastro(nome, email, senha, confirmarSenha, telefone, genero || 'Gênero');
    }

    return (
        <SafeAreaView
            style={styles.container}
            testID="create-account-screen"
            accessibilityLabel="create-account-screen"
        >
            <KeyboardAvoidingView
                style={{ flex: 1 }}
                behavior={Platform.OS === 'ios' ? 'padding' : 'height'}
            >
...
